welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:9: error: illegal start of statement
     else if (((getX()==6)||(getY==0))) {
     ^